--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "@iarna/toml": "^2.2.5",
     "bent": "^7.3.12",
     "da-slash": "git+https://github.com/fasko-web/da-slash.git",
+    "discord-buttons": "^3.1.1",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "gamedig": "^3.0.0",
     "env-subst": "^1.0.3",
+    "gamedig": "^3.0.0",
     "human-interval": "^2.0.1",
     "jsonfile": "^6.1.0",
     "p-ratelimit": "^1.0.1"
